fix: add important font weight to .ma-item in left-aligned found-words-list for enhanced readability

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -1232,7 +1232,10 @@ ol.found-words-list {
 		&.left {
 			width: 22%;
 			text-align: center;
-			font-weight: 600;
+
+			.ma-item {
+				font-weight: 600 !important;
+			}
 		}
 
 		&.right {
